--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,15 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - setup_remote_docker
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.09.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       - run:
           name: Create VMs
           command: bin/provision_test_vms.sh
