ci: Login to quay.io with a Robot account
wksctl needs to pull the Pharos image from a private quay.io repo. Login with a
read only robot account!

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs:
       - run:
           name: Run integration tests
           command: |
+            docker login -u="$DOCKER_USER" -p="$DOCKER_PASSWORD" quay.io
             make binaries
             go test -v ./test -args -run.interactive -cmd $PWD/cmd/wksctl/wksctl
       - run:
