Install kinit in machine executor

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
     working_directory: /home/circleci/go/src/github.com/weaveworks/wks
     steps:
       - checkout
+
       - attach_workspace:
           at: /tmp/workspace
       - run: /tmp/workspace/cmd/wksctl/wksctl version
@@ -52,11 +53,20 @@ jobs:
           name: Create VMs
           command: docker run --env-file <(env|grep -E 'CIRCLE|SECRET|SRCDIR') -v /root:/root -v /tmp:/tmp -v /home/circleci:/home/circleci --entrypoint=$SRCDIR/bin/provision_test_vms.sh weaveworks/wks-build:latest
       - run: sudo chown -R circleci:circleci /root # Make the VM SSH keys readable to the circleci user
+
+      - run:
+          name: Initialise Kerberos
+          command: |
+            KERBEROS_IP=$(jq -r '.public_ips.value[0]' /tmp/terraform_output.json)
+            sed -e s/KERBEROS_IP/$KERBEROS_IP/g test/krb5.conf.template | sudo tee /etc/krb5.conf
+            sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get install -y krb5-user
+
       - run:
           name: Run integration tests
           command: |
             docker login -u="$DOCKER_USER" -p="$DOCKER_PASSWORD" quay.io
             make integration-test
+
       - run:
           name: Destroy VMs
           command: docker run --env-file <(env|grep -E 'CIRCLE|SECRET|SRCDIR') -v /root:/root -v /tmp:/tmp -v /home/circleci:/home/circleci --entrypoint=$SRCDIR/bin/circle-destroy-vms weaveworks/wks-build:latest
