ci: Also build & release when pushing a tag
When pushing a tag, the CI_BRANCH env variable isn't defined but we still want
to deploy to S3!

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
             if [ -z "$TAG" ]; then
               TAG=$(./tools/image-tag)
             fi
-            if [ "${CI_BRANCH}" == "master" ]; then
+            if [ -z "${CI_BRANCH}" -o "${CI_BRANCH}" == "master" ]; then
               # aws gets its credential through the AWS_ACCESS_KEY_ID and
               # AWS_SECRET_ACCESS_KEY environment variables.
               aws s3 cp cmd/wksctl/wksctl s3://weaveworks-wks/wksctl-${TAG}
