ci: Install kubectl to run the integration tests
kubectl is needed a apply addons.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,12 @@ jobs:
             sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get install -y krb5-user
 
       - run:
+          name: Install kubectl
+          command: |
+            sudo curl -o /usr/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.10.5/bin/linux/amd64/kubectl
+            sudo chmod +x /usr/bin/kubectl
+
+      - run:
           name: Run integration tests
           command: |
             docker login -u="$DOCKER_USER" -p="$DOCKER_PASSWORD" quay.io
