--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -8,7 +8,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 args:
-  grafanalibExec: "generate-dashboards"
+  grafanalibExec: "generate-dashboard"
   grafanalibEnv:
   - "DATA_SOURCE=Prometheus"
   dashboard:
