Disable retrying sync job by default

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -7,6 +7,9 @@ image:
 nameOverride: ""
 fullnameOverride: ""
 
+syncJob:
+  backoffLimit: 0
+
 dashboards:
   # Passed through tpl
   grafanalibConfigMap: '{{ include "wkp-ui.fullname" . }}-grafanalib'
