--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -1,6 +1,6 @@
 image:
-  repository: quay.io/weaveworks/wkp-grafana-sync
-  tag: master-4f7a721
+  repository: weaveworks/wkp-grafana-sync
+  tag: from-quayio-to-dockerhub-46c55e5
   pullSecrets: []
   pullPolicy: IfNotPresent
 
@@ -54,10 +54,10 @@ grafana:
       default_theme: light
   # Pull our own image of Grafana as it contains all our extra plugins
   image:
-    repository: quay.io/weaveworks/wkp-grafana
-    tag: master-24ccacd
+    repository: weaveworks/wkp-grafana
+    tag: from-quayio-to-dockerhub-46c55e5
     pullSecrets:
-      - quay-secret
+      - dockerhub-secret
   env:
     # Override the default path because that dir gets cleaned up by Grafana Helm Chart.
     # Also, we use env var to do that because of http://docs.grafana.org/installation/docker/#default-paths
