--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -10,6 +10,7 @@ fullnameOverride: ""
 syncJob:
   backoffLimit: 0
 
+homeDashboard: "home-dashboard"
 dashboards:
   # Passed through tpl
   grafanalibConfigMap: '{{ include "wkp-ui.fullname" . }}-grafanalib'
