--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -10,7 +10,7 @@ fullnameOverride: ""
 syncJob:
   backoffLimit: 0
 
-homeDashboard: "home-dashboard"
+homeDashboard: ""
 dashboards:
   # Passed through tpl
   grafanalibConfigMap: '{{ include "wkp-ui.fullname" . }}-grafanalib'
