Git-ignore .envrc files as they shouldn't be shared
... and may contain sensitive information required for, e.g.: running some of the examples.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ footloose.yaml
 
 # OS-specific files:
 .DS_Store
+
+# Ignore direnv's .envrc files, as they should not be shared and may contain
+# sensitive information:
+.envrc
