--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,10 @@ workflows:
       - container-tests:
           requires:
             - build
-      - integration-tests:
+      # - integration-tests:
+      #     requires:
+      #       - build
+      - integration-tests-simplified:
           requires:
             - build
 
@@ -112,6 +115,60 @@ jobs:
       - run:
           name: Create VMs
           command: docker run --env-file <(env|grep -E 'CIRCLE|SECRET|SRCDIR') -v /root:/root -v /tmp:/tmp -v /home/circleci:/home/circleci --entrypoint=$SRCDIR/test/integration/bin/provision_test_vms.sh quay.io/wks/build:latest
+      - run: sudo chown -R circleci:circleci /root # Make the VM SSH keys readable to the circleci user
+
+      - run:
+          name: Initialise Kerberos
+          command: |
+            KERBEROS_IP=$(jq -r '.public_ips.value[0]' /tmp/terraform_output.json)
+            sed -e s/KERBEROS_IP/$KERBEROS_IP/g test/integration/krb5.conf.template | sudo tee /etc/krb5.conf
+            sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get install -y krb5-user
+
+      - run:
+          name: Install kubectl (from workspace)
+          command: |
+            sudo cp /tmp/workspace/kubectl /usr/bin/kubectl
+
+      - run:
+          name: Run integration tests
+          command: |
+            docker login -u="$DOCKER_USER" -p="$DOCKER_PASSWORD" quay.io
+            export GOROOT=/home/circleci/go-${GOVERSION}
+            export PATH=~/go-${GOVERSION}/bin:$PATH
+            # Work around for broken docker package in RHEL
+            # See https://github.com/weaveworks/wks/issues/235
+            export DOCKER_VERSION='1.13.1-75*'
+            make integration-test
+
+      - run:
+          name: Destroy VMs
+          command: docker run --env-file <(env|grep -E 'CIRCLE|SECRET|SRCDIR') -v /root:/root -v /tmp:/tmp -v /home/circleci:/home/circleci --entrypoint=$SRCDIR/test/integration/bin/circle-destroy-vms quay.io/wks/build:latest
+
+  integration-tests-simplified:
+    machine:
+      docker_layer_caching: true
+    environment:
+      GOVERSION: 1.11.2
+      GOPATH: /home/circleci/go
+      SRCDIR: /home/circleci/go/src/github.com/weaveworks/wks
+    working_directory: /home/circleci/go/src/github.com/weaveworks/wks
+    steps:
+      - checkout
+
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: /tmp/workspace/cmd/wksctl/wksctl version
+      - run: env
+
+      - run:
+          name: Install go ${GOVERSION}
+          command: |
+            (cd ~ && curl -O https://dl.google.com/go/go${GOVERSION}.linux-amd64.tar.gz)
+            mkdir ~/go-${GOVERSION} && tar xf ~/go${GOVERSION}.linux-amd64.tar.gz -C ~/go-${GOVERSION} --strip-components 1
+
+      - run:
+          name: Create VMs
+          command: docker run --env-file <(env|grep -E 'CIRCLE|SECRET|SRCDIR') -v /root:/root -v /tmp:/tmp -v /home/circleci:/home/circleci --entrypoint=/bin/bash quay.io/wks/build:latest -c "echo hello world"
       - run: sudo chown -R circleci:circleci /root # Make the VM SSH keys readable to the circleci user
 
       - run:
