delete the container-tests <- build dependency

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,7 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - container-tests:
-          requires:
-            - build
+      - container-tests: {}
       - integration-tests:
           requires:
             - build
