--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ workflows:
             tags:
               only: /.*/
       - container-tests: {}
+      - unit-tests: {}
       - integration-tests:
           requires:
             - build
@@ -39,9 +40,6 @@ jobs:
           command: |
             make
             make lint
-      - run:
-          name: Run unit tests
-          command: make unit-tests
       - deploy:
           name: Push wksctl to S3
           command: |
@@ -61,6 +59,29 @@ jobs:
           - cmd/wksctl/wksctl
       - run: docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD" quay.io
       - run: make push
+
+  unit-tests:
+    machine:
+      docker_layer_caching: true
+    environment:
+      GOVERSION: 1.11.2
+      GOPATH: /home/circleci/go
+      SRCDIR: /home/circleci/go/src/github.com/weaveworks/wks
+    working_directory: /home/circleci/go/src/github.com/weaveworks/wks
+    steps:
+      - checkout
+      - run:
+          name: Install go ${GOVERSION}
+          command: |
+            (cd ~ && curl -O https://dl.google.com/go/go${GOVERSION}.linux-amd64.tar.gz)
+            mkdir ~/go-${GOVERSION} && tar xf ~/go${GOVERSION}.linux-amd64.tar.gz -C ~/go-${GOVERSION} --strip-components 1
+
+      - run:
+          name: Run container tests
+          command: |
+            export GOROOT=/home/circleci/go-${GOVERSION}
+            export PATH=~/go-${GOVERSION}/bin:$PATH
+            make unit-tests
 
   container-tests:
     machine:
