clean up GOROOT; execute make before make unit-tests (there\`s some dependency problem that I\`m debugging)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,7 @@ jobs:
       docker_layer_caching: true
     environment:
       GOVERSION: 1.11.2
+      GOROOT: /home/circleci/goroot
       GOPATH: /home/circleci/go
       SRCDIR: /home/circleci/go/src/github.com/weaveworks/wks
     working_directory: /home/circleci/go/src/github.com/weaveworks/wks
@@ -74,14 +75,13 @@ jobs:
           name: Install go ${GOVERSION}
           command: |
             (cd ~ && curl -O https://dl.google.com/go/go${GOVERSION}.linux-amd64.tar.gz)
-            mkdir ~/go-${GOVERSION} && tar xf ~/go${GOVERSION}.linux-amd64.tar.gz -C ~/go-${GOVERSION} --strip-components 1
+            mkdir ~/goroot && tar xf ~/go${GOVERSION}.linux-amd64.tar.gz -C $GOROOT --strip-components 1
 
       - run:
           name: Run container tests
           command: |
-            export GOROOT=/home/circleci/go-${GOVERSION}
-            export PATH=~/go-${GOVERSION}/bin:$PATH
-            make unit-tests
+            export PATH=$GOROOT/bin:$PATH
+            make && make unit-tests
 
   container-tests:
     machine:
