--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,6 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run:
-          name: Install kubectl
-          command: |
-            sudo curl -o kubectl https://storage.googleapis.com/kubernetes-release/release/v1.10.5/bin/linux/amd64/kubectl
-            sudo chmod +x kubectl
-            sudo cp kubectl /usr/local/bin
 
       - run:
           command: |
@@ -61,27 +55,33 @@ jobs:
       - run: make push
 
   unit-tests:
-    machine:
-      docker_layer_caching: true
-    environment:
-      GOVERSION: 1.11.2
-      GOROOT: /home/circleci/goroot
-      GOPATH: /home/circleci/go
-      SRCDIR: /home/circleci/go/src/github.com/weaveworks/wks
-    working_directory: /home/circleci/go/src/github.com/weaveworks/wks
+    docker:
+      - image: quay.io/wks/build:master-7421a07b
+        environment:
+          GOVERSION: 1.11.2
+          GOROOT: /goroot
+          GOPATH: /go
+          SRCDIR: /go/src/github.com/weaveworks/wks
+    working_directory: /go/src/github.com/weaveworks/wks
     steps:
       - checkout
+      - run:
+          name: Install kubectl
+          command: |
+            sudo curl -o kubectl https://storage.googleapis.com/kubernetes-release/release/v1.10.5/bin/linux/amd64/kubectl
+            sudo chmod +x kubectl
+            sudo cp kubectl /usr/local/bin
       - run:
           name: Install go ${GOVERSION}
           command: |
             (cd ~ && curl -O https://dl.google.com/go/go${GOVERSION}.linux-amd64.tar.gz)
-            mkdir ~/goroot && tar xf ~/go${GOVERSION}.linux-amd64.tar.gz -C $GOROOT --strip-components 1
+            mkdir -p $GOROOT && tar xf ~/go${GOVERSION}.linux-amd64.tar.gz -C $GOROOT --strip-components 1
 
       - run:
           name: Run container tests
           command: |
             export PATH=$GOROOT/bin:$PATH
-            make && make unit-tests
+            make unit-tests
 
   container-tests:
     machine:
