no longer install go

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,8 +58,6 @@ jobs:
     docker:
       - image: quay.io/wks/build:master-7421a07b
         environment:
-          GOVERSION: 1.11.2
-          GOROOT: /goroot
           GOPATH: /go
           SRCDIR: /go/src/github.com/weaveworks/wks
     working_directory: /go/src/github.com/weaveworks/wks
@@ -72,12 +70,6 @@ jobs:
             sudo chmod +x kubectl
             sudo cp kubectl /usr/local/bin
       - run:
-          name: Install go ${GOVERSION}
-          command: |
-            (cd ~ && curl -O https://dl.google.com/go/go${GOVERSION}.linux-amd64.tar.gz)
-            mkdir -p $GOROOT && tar xf ~/go${GOVERSION}.linux-amd64.tar.gz -C $GOROOT --strip-components 1
-
-      - run:
           name: Run container tests
           command: |
             export PATH=$GOROOT/bin:$PATH
@@ -87,24 +79,15 @@ jobs:
     machine:
       docker_layer_caching: true
     environment:
-      GOVERSION: 1.11.2
       GOPATH: /home/circleci/go
       SRCDIR: /home/circleci/go/src/github.com/weaveworks/wks
     working_directory: /home/circleci/go/src/github.com/weaveworks/wks
     steps:
       - checkout
-      - run:
-          name: Install go ${GOVERSION}
-          command: |
-            (cd ~ && curl -O https://dl.google.com/go/go${GOVERSION}.linux-amd64.tar.gz)
-            mkdir ~/go-${GOVERSION} && tar xf ~/go${GOVERSION}.linux-amd64.tar.gz -C ~/go-${GOVERSION} --strip-components 1
 
       - run:
           name: Run container tests
-          command: |
-            export GOROOT=/home/circleci/go-${GOVERSION}
-            export PATH=~/go-${GOVERSION}/bin:$PATH
-            make container-tests
+          command: make container-tests
 
   integration-tests:
     docker:
