--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,13 @@ jobs:
       - run: env
 
       - run:
+          name: Install kubectl
+          command: |
+            sudo curl -o kubectl https://storage.googleapis.com/kubernetes-release/release/v1.10.5/bin/linux/amd64/kubectl
+            sudo chmod +x kubectl
+            sudo cp kubectl /usr/local/bin
+
+      - run:
           name: Create VMs
           command: $SRCDIR/test/integration/bin/up.sh
 
