Revert "remove the integration-tests <- build dependency"
This reverts commit 135b5ebb52509e9d5fc01d967e5b156568725bc0.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,9 @@ workflows:
               only: /.*/
       - container-tests: {}
       - unit-tests: {}
-      - integration-tests: {}
+      - integration-tests:
+          requires:
+            - build
 
 jobs:
   build:
