--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,10 @@ workflows:
               only: /.*/
       - container-tests: {}
       - unit-tests: {}
-      - integration-tests:
+      - integration-tests-baremetal-centos:
+          requires:
+            - build
+      - integration-tests-baremetal-ubuntu:
           requires:
             - build
 
@@ -104,7 +107,7 @@ jobs:
             go version
             make container-tests
 
-  integration-tests:
+  integration-tests-baremetal-centos:
     docker:
       - image: quay.io/wks/build:master-7421a07b
         environment:
@@ -112,6 +115,9 @@ jobs:
           SRCDIR: /go/src/github.com/weaveworks/wks
           KUBECTL_URL: https://dl.k8s.io/v1.10.5/kubernetes-client-linux-amd64.tar.gz
           KUBECTL_CHECKSUM: da9d557989a0b9671a610f21642052febb8f70c3cf144c98a8a4f7ecab6bafe2
+          CREATE_IMAGE: 0
+          USE_IMAGE: 0
+          IMAGE_NAME: centos-cloud/centos-7
     working_directory: /go/src/github.com/weaveworks/wks
     steps:
       - checkout
@@ -132,7 +138,7 @@ jobs:
 
       - run:
           name: Create VMs
-          command: CREATE_IMAGE=0 IMAGE_NAME=ubuntu-os-cloud/ubuntu-1804-bionic-v20190530 USE_IMAGE=0 $SRCDIR/test/integration/bin/up.sh
+          command: $SRCDIR/test/integration/bin/up.sh
 
       - run:
           name: Run integration tests
@@ -140,5 +146,47 @@ jobs:
 
       - run:
           name: Destroy VMs
-          command: IMAGE_NAME=ubuntu-os-cloud/ubuntu-1804-bionic-v20190530 $SRCDIR/test/integration/bin/down.sh
+          command: $SRCDIR/test/integration/bin/down.sh
+          when: always
+
+  integration-tests-baremetal-ubuntu:
+    docker:
+      - image: quay.io/wks/build:master-7421a07b
+        environment:
+          GOPATH: /go/
+          SRCDIR: /go/src/github.com/weaveworks/wks
+          KUBECTL_URL: https://dl.k8s.io/v1.10.5/kubernetes-client-linux-amd64.tar.gz
+          KUBECTL_CHECKSUM: da9d557989a0b9671a610f21642052febb8f70c3cf144c98a8a4f7ecab6bafe2
+          CREATE_IMAGE: 0
+          USE_IMAGE: 0
+          IMAGE_NAME: ubuntu-os-cloud/ubuntu-1804-bionic-v20190530
+    working_directory: /go/src/github.com/weaveworks/wks
+    steps:
+      - checkout
+      - setup_remote_docker
+
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: /tmp/workspace/cmd/wksctl/wksctl version
+      - run: env
+
+      - run:
+          name: Install kubectl
+          command: |
+            curl -L $KUBECTL_URL -o kubectl.tar.gz
+            echo "$KUBECTL_CHECKSUM kubectl.tar.gz" | sha256sum -c
+            tar xvzf kubectl.tar.gz --strip-components=3
+            sudo mv kubectl /usr/local/bin
+
+      - run:
+          name: Create VMs
+          command: $SRCDIR/test/integration/bin/up.sh
+
+      - run:
+          name: Run integration tests
+          command: $SRCDIR/test/integration/bin/test.sh
+
+      - run:
+          name: Destroy VMs
+          command: $SRCDIR/test/integration/bin/down.sh
           when: always
