Initial support for installing auth pem files from sealed secrets (#630)
* initial support for installing auth pem files

* add new vendored package

* one more missing new file

* rebase master changes

* fix bad secret name in authn file

* apply auth manifest in apply test

* fix tabs in manifest and point to good auth manifest

* add debugging

* more debugging

* checkpoint

* more test debugging

* debugging

* persist authz server to workspace

* debugging

* debugging

* more test debugging

* rebase master

* add file lost in rebase

* more rebase fixes

* fix typo

* test debugging

* fix path to assets dir

* fix

* fix invocation of auth server

* fully qualify paths for apply test

* Better resource failure info

* copy auth server to seed node host

* remove test dependency on scripts

* fix pem dir on remote host

* https

* avoid ip san issue

* add 127.0.0.1 to subject alternative names

* seal new secrets

* correct certs for sealing

* ip san actually in cert, not just csr

* more debugging

* set namespaces for sealed secrets to match test

* fix namespaces without breaking decryption

* remove debugging statements

* No wait for sealed secret controller if auth not specified

* Don't add auth config manifest to config resources if not using auth

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
           paths:
           - kubectl
           - cmd/wksctl/wksctl
+          - cmd/mock-https-authz-server/server
       - run: docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD" quay.io
       - run: make push
 
