--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ workflows:
               only: /.*/
       - container-tests: {}
       - unit-tests: {}
+      - integration-tests-container:
+          requires:
+            - build
       - integration-tests-gcp-centos:
           requires:
             - build
@@ -107,6 +110,68 @@ jobs:
             export PATH=$GOROOT/bin:$PATH
             go version
             make container-tests
+
+  integration-tests-container:
+    machine:
+      docker_layer_caching: true
+    environment:
+      GOURL: https://dl.google.com/go/go1.11.2.linux-amd64.tar.gz
+      GOCHECKSUM: 1dfe664fa3d8ad714bbd15a36627992effd150ddabd7523931f077b3926d736d
+      GOROOT: /home/circleci/goroot
+      GOPATH: /home/circleci/go
+      SRCDIR: /home/circleci/go/src/github.com/weaveworks/wks
+      HUGO_URL: https://github.com/gohugoio/hugo/releases/download/v0.55.6/hugo_0.55.6_Linux-64bit.tar.gz
+      HUGO_CHECKSUM: 39d3119cdb9ba5d6f1f1b43693e707937ce851791a2ea8d28003f49927c428f4
+      FOOTLOOSE_URL: https://github.com/weaveworks/footloose/releases/download/0.5.0/footloose-0.5.0-linux-x86_64
+      FOOTLOOSE_CHECKSUM: 0e4e49e81940c5876eafa26607154acd788d9979e9f4a4215f17532a3ea5429a
+      KUBECTL_URL: https://dl.k8s.io/v1.10.5/kubernetes-client-linux-amd64.tar.gz
+      KUBECTL_CHECKSUM: da9d557989a0b9671a610f21642052febb8f70c3cf144c98a8a4f7ecab6bafe2
+    working_directory: /home/circleci/go/src/github.com/weaveworks/wks
+    steps:
+      - checkout
+      - run:
+          name: Install go
+          command: |
+            (cd ~ && curl -L $GOURL -o go.tar.gz && echo "$GOCHECKSUM go.tar.gz" | sha256sum -c)
+            mkdir -p $GOROOT && tar xf ~/go.tar.gz -C $GOROOT --strip-components 1
+      - run:
+          name: Install hugo
+          command: |
+            curl -L $HUGO_URL -o hugo.tar.gz
+            echo "$HUGO_CHECKSUM hugo.tar.gz" | sha256sum -c
+            tar xzf hugo.tar.gz hugo
+            chmod +x hugo
+            sudo mv hugo /usr/local/bin
+      - run:
+          name: Install footloose
+          command: |
+            curl -L $FOOTLOOSE_URL -o footloose
+            echo "$FOOTLOOSE_CHECKSUM footloose" | sha256sum -c
+            chmod +x footloose
+            sudo mv footloose /usr/local/bin
+      - run:
+          name: Install kubectl
+          command: |
+            curl -L $KUBECTL_URL -o kubectl.tar.gz
+            echo "$KUBECTL_CHECKSUM kubectl.tar.gz" | sha256sum -c
+            tar xvzf kubectl.tar.gz --strip-components=3
+            sudo mv kubectl /usr/local/bin
+      - restore_cache:
+          keys:
+            - local-docker-registry-images
+      - run:
+          name: Run integration container tests
+          command: |
+            export PATH=$GOROOT/bin:$PATH
+            go version
+            make
+            make integration-tests-container
+      - save_cache:
+          key: local-docker-registry-images
+          paths:
+            # This ought to match the path mounted by the local Docker registry
+            # in the integration tests.
+            - "/tmp/registry"
 
   integration-tests-gcp-centos:
     docker:
