--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -1,38 +1,9 @@
-image:
-  repository: weaveworks/wkp-grafana-sync
-  tag: master-e3a15d9
-  pullSecrets: []
-  pullPolicy: IfNotPresent
-
 nameOverride: ""
 fullnameOverride: ""
-
-syncJob:
-  backoffLimit: 0
-
-dashboards:
-  # Passed through tpl
-  grafanalibConfigMap: '{{ include "wkp-ui.fullname" . }}-grafanalib'
-  jsonConfigMap: '{{ include "wkp-ui.fullname" . }}-json'
-
-args:
-  grafanalibExec: "generate-dashboards"
-  dashboard:
-    configPrefix: "{{ .Release.Name }}-"
-    configLabels: "grafana_dashboard,{{ .Release.Name }}-grafana-dashboard"
-    configNamespace: "{{ .Release.Namespace }}"
 
 ingress:
   enabled: false
   # TODO more config
-
-resources: {}
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
 
 # TODO:
 #   * Make sure these values are passed to JS in wkp-ui-server
@@ -47,6 +18,29 @@ dashboardUrl:
   alerts: http://wkp-ui-grafana.monitoring.svc:80/d/alerts/prometheus-alertmanager
   allNodes: http://wkp-ui-grafana.monitoring.svc:80/d/all-nodes-resources/kubernetes-all-nodes-resources
   singleNode: http://wkp-ui-grafana.monitoring.svc:80/d/single-node-resources/kubernetes-single-node-resources
+
+grafanaSync:
+  image:
+    repository: weaveworks/wkp-grafana-sync
+    tag: master-e3a15d9
+    pullSecrets: []
+    pullPolicy: IfNotPresent
+  job:
+    backoffLimit: 0
+  dashboards:
+    # Passed through tpl
+    grafanalibConfigMap: '{{ include "wkp-ui.fullname" . }}-grafanalib'
+    jsonConfigMap: '{{ include "wkp-ui.fullname" . }}-json'
+  args:
+    grafanalibExec: "generate-dashboards"
+    dashboard:
+      configPrefix: "{{ .Release.Name }}-"
+      configLabels: "grafana_dashboard,{{ .Release.Name }}-grafana-dashboard"
+      configNamespace: "{{ .Release.Namespace }}"
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+  resources: {}
 
 grafana:
   enabled: true
