Customizable image for wkp-ui-server

--- a/ui/chart/wkp-ui/templates/ingress.yaml
+++ b/ui/chart/wkp-ui/templates/ingress.yaml
@@ -16,7 +16,7 @@ spec:
       - path: /homepage
         backend:
           serviceName: {{ .Release.Name }}-server
-          servicePort: 80
+          servicePort: {{ .Values.uiServer.service.port }}
       - path: /
         backend:
           serviceName: {{ .Release.Name }}-grafana
